--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "react-hook-form": "^7.43.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0"
   },
   "scripts": {
     "start": "react-scripts start",
