--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^18.2.0",
     "react-grid-system": "^8.1.9",
     "react-hook-form": "^7.43.1",
+    "react-icons": "^4.8.0",
+    "react-pro-sidebar": "^1.0.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
