--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-grid-system": "^8.1.9",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
     "react-pro-sidebar": "^1.0.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.1",
@@ -50,8 +51,5 @@
     "eslint-config-standard": "^17.0.0",
     "standard": "^17.0.0",
     "web-vitals": "^3.1.1"
-  },
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint-config-standard": true
   }
 }
