--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
+    "react-photo-album": "^2.0.3",
     "react-pro-sidebar": "^1.0.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.1",
