--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,18 +7,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
+    "bootstrap": "^5.3.0",
+    "framer-motion": "^10.12.16",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-grid-gallery": "^1.0.0",
     "react-grid-system": "^8.1.9",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.4.4",
     "react-loader-spinner": "^5.3.4",
     "react-pro-sidebar": "^1.0.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0"
   },
   "scripts": {
@@ -33,7 +36,9 @@
       "react-app",
       "react-app/jest",
       "standard",
-      "./node_modules/standard/eslintrc.json"
+      "./node_modules/standard/eslintrc.json",
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -49,7 +54,9 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.41.0",
     "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "standard": "^17.0.0",
     "web-vitals": "^3.1.1"
   }
