--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,3 @@
-.env
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# dependencies
+node_modules/*
