--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "framer-motion": "^10.12.16",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
